# clion_android10

./: README.md
art/adbconnection/libadbconnection-arm-android/: CMakeLists.txt
art/adbconnection/libadbconnection-arm64-android/: CMakeLists.txt
art/adbconnection/libadbconnection-x86-linux_glibc/: CMakeLists.txt
art/adbconnection/libadbconnection-x86_64-linux_glibc/: CMakeLists.txt
art/adbconnection/libadbconnectiond-arm-android/: CMakeLists.txt
art/adbconnection/libadbconnectiond-arm64-android/: CMakeLists.txt
art/adbconnection/libadbconnectiond-x86-linux_glibc/: CMakeLists.txt
art/adbconnection/libadbconnectiond-x86_64-linux_glibc/: CMakeLists.txt
art/benchmark/libartbenchmark-arm-android/: CMakeLists.txt
art/benchmark/libartbenchmark-arm64-android/: CMakeLists.txt
art/benchmark/libartbenchmark-micronative-host-x86-linux_glibc/: CMakeLists.txt
art/benchmark/libartbenchmark-micronative-host-x86_64-linux_glibc/: CMakeLists.txt
art/benchmark/libartbenchmark-x86-linux_glibc/: CMakeLists.txt
art/benchmark/libartbenchmark-x86_64-linux_glibc/: CMakeLists.txt
art/cmdline/art_cmdline_tests-arm-android/: CMakeLists.txt
art/cmdline/art_cmdline_tests-arm64-android/: CMakeLists.txt
art/cmdline/art_cmdline_tests-x86-linux_glibc/: CMakeLists.txt
art/cmdline/art_cmdline_tests-x86_64-linux_glibc/: CMakeLists.txt
art/compiler/art_compiler_host_tests-x86-linux_glibc/: CMakeLists.txt
art/compiler/art_compiler_host_tests-x86_64-linux_glibc/: CMakeLists.txt
art/compiler/art_compiler_tests-arm-android/: CMakeLists.txt
art/compiler/art_compiler_tests-arm64-android/: CMakeLists.txt
art/compiler/art_compiler_tests-x86-linux_glibc/: CMakeLists.txt
art/compiler/art_compiler_tests-x86_64-linux_glibc/: CMakeLists.txt
art/compiler/libart-compiler-arm-android/: CMakeLists.txt
art/compiler/libart-compiler-arm64-android/: CMakeLists.txt
art/compiler/libart-compiler-gtest-arm-android/: CMakeLists.txt
art/compiler/libart-compiler-gtest-arm64-android/: CMakeLists.txt
art/compiler/libart-compiler-gtest-x86-linux_glibc/: CMakeLists.txt
art/compiler/libart-compiler-gtest-x86_64-linux_glibc/: CMakeLists.txt
art/compiler/libart-compiler-x86-linux_glibc/: CMakeLists.txt
art/compiler/libart-compiler-x86_64-linux_glibc/: CMakeLists.txt
art/compiler/libartd-compiler-arm-android/: CMakeLists.txt
art/compiler/libartd-compiler-arm64-android/: CMakeLists.txt
art/compiler/libartd-compiler-x86-linux_glibc/: CMakeLists.txt
art/compiler/libartd-compiler-x86_64-linux_glibc/: CMakeLists.txt
art/libartbase/libartbased-x86_64-windows/: CMakeLists.txt
art/runtime/libart-x86-linux_glibc/: CMakeLists.txt
art/test/libtiagent-x86_64-linux_glibc/: CMakeLists.txt
art/tools/art_verifier/art_verifier-arm64-android/: CMakeLists.txt
bionic/libc/libc_bionic_ndk-arm64-android/: CMakeLists.txt
bionic/tests/headers/posix/libbionic_tests_headers_posix-x86-linux_glibc/: CMakeLists.txt
device/generic/opengl-transport/host/libs/virglrenderer/libvirglrenderer_cuttlefish-x86_64-linux_glibc/: CMakeLists.txt
frameworks/av/media/libeffects/lvm/lib/libmusicbundle-arm-android/: CMakeLists.txt
frameworks/av/media/libstagefright/http/libstagefright_http_support-arm64-android/: CMakeLists.txt
frameworks/base/cmds/statsd/statsd_test-arm-android/: CMakeLists.txt
frameworks/base/libs/hwui/hwui_unit_tests-arm64-android/: CMakeLists.txt
frameworks/base/tools/aapt2/aapt2_tests-x86_64-linux_glibc/: CMakeLists.txt
frameworks/native/: CMakeLists.txt
frameworks/native/libs/vr/libdvr/tests/dvr_display-test-arm-android/: CMakeLists.txt
frameworks/wilhelm/src/libwilhelm-arm-android/: CMakeLists.txt
hardware/nxp/nfc/nfc_nci_nxp-arm64-android/: CMakeLists.txt
libcore/libandroidio-arm-android/: CMakeLists.txt
libcore/libandroidio-arm64-android/: CMakeLists.txt
libcore/libandroidio-x86-linux_glibc/: CMakeLists.txt
libcore/libandroidio-x86_64-linux_glibc/: CMakeLists.txt
libcore/libjavacore-arm-android/: CMakeLists.txt
libcore/libjavacore-arm64-android/: CMakeLists.txt
libcore/libjavacore-benchmarks-arm-android/: CMakeLists.txt
libcore/libjavacore-benchmarks-arm64-android/: CMakeLists.txt
libcore/libjavacore-benchmarks-x86-linux_glibc/: CMakeLists.txt
libcore/libjavacore-benchmarks-x86_64-linux_glibc/: CMakeLists.txt
libcore/libjavacore-unit-tests-arm-android/: CMakeLists.txt
libcore/libjavacore-unit-tests-arm64-android/: CMakeLists.txt
libcore/libjavacore-unit-tests-x86-linux_glibc/: CMakeLists.txt
libcore/libjavacore-unit-tests-x86_64-linux_glibc/: CMakeLists.txt
libcore/libjavacore-x86-linux_glibc/: CMakeLists.txt
libcore/libjavacore-x86_64-linux_glibc/: CMakeLists.txt
libcore/libjavacoretests-arm-android/: CMakeLists.txt
libcore/libjavacoretests-arm64-android/: CMakeLists.txt
libcore/libjavacoretests-x86-linux_glibc/: CMakeLists.txt
libcore/libjavacoretests-x86_64-linux_glibc/: CMakeLists.txt
libcore/libopenjdk-arm-android/: CMakeLists.txt
libcore/libopenjdk-arm64-android/: CMakeLists.txt
libcore/libopenjdk-x86-linux_glibc/: CMakeLists.txt
libcore/libopenjdk-x86_64-linux_glibc/: CMakeLists.txt
libcore/libopenjdkd-arm-android/: CMakeLists.txt
libcore/libopenjdkd-arm64-android/: CMakeLists.txt
libcore/libopenjdkd-x86-linux_glibc/: CMakeLists.txt
libcore/libopenjdkd-x86_64-linux_glibc/: CMakeLists.txt
libnativehelper/libnativehelper-arm-android/: CMakeLists.txt
libnativehelper/libnativehelper-arm64-android/: CMakeLists.txt
libnativehelper/libnativehelper-x86-linux_glibc/: CMakeLists.txt
libnativehelper/libnativehelper-x86-windows/: CMakeLists.txt
libnativehelper/libnativehelper-x86_64-linux_glibc/: CMakeLists.txt
libnativehelper/libnativehelper-x86_64-windows/: CMakeLists.txt
libnativehelper/libnativehelper_compat_libc++-arm-android/: CMakeLists.txt
libnativehelper/libnativehelper_compat_libc++-arm64-android/: CMakeLists.txt
system/bt/profile/sdp/sdp_service-arm64-android/: CMakeLists.txt
system/bt/stack/libbt-stack-arm64-android/: CMakeLists.txt
system/core/init/libinit-arm64-android/: CMakeLists.txt
(+6898 files in other folders)
